--- a/TMS/src/tms/gui/Faculty.form
+++ b/TMS/src/tms/gui/Faculty.form
@@ -36,7 +36,7 @@
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
-                              <Component id="txtStudentId" min="-2" pref="107" max="-2" attributes="0"/>
+                              <Component id="inputStudentId" min="-2" pref="107" max="-2" attributes="0"/>
                               <EmptySpace max="32767" attributes="0"/>
                           </Group>
                       </Group>
@@ -76,7 +76,7 @@
               <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
                   <Component id="lblEnterStudId" min="-2" max="-2" attributes="0"/>
-                  <Component id="txtStudentId" min="-2" max="-2" attributes="0"/>
+                  <Component id="inputStudentId" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="btnSubmitStudentId" min="-2" max="-2" attributes="0"/>
@@ -98,9 +98,9 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JTextField" name="txtStudentId">
+    <Component class="javax.swing.JTextField" name="inputStudentId">
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtStudentIdActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="inputStudentIdActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JComboBox" name="cmbSelectTeacherName">
